tests/gabc-dump/should-fail/bad-cavum.gabc
name: bad cavum;
%%
(c3) g(g) r(r) (::)
